dohpaZ (01/01/02)
---------------------
Happy New Year

Modifications:
 + Made the map check check that the followed player/spawn is visible more 
   often.
 + Updated INSTALL to warn people about using Qt 3.x.
 + Applied patch #498257 "fix --with-qt-dir" from njk (yendor).

dohpaZ (31/12/01)
---------------------
Modifications:
 + a few tweaks to configure.  Robustness and made the RPATH, extra libs,
   and extra includes stuff actually work.

Bug Fixes:
 + Made ShowEQ not crash and give an appropriate error message if it is 
   unable to open the network device.  If it detects that the user is 
   not running as root it will suggest they do so.

dohpaZ (31/12/01)
---------------------
Modifications:
 + Updated showeq.conf.dist to reflect that the KeyMap section is no longer 
   used, and how to configure keyboard accelerators on a per map basis
   (see Map section).

Bug Fixes:
 + Made automatic client detection work again.

fee (31/12/01)
---------------------
Mods:
 + updated playerProfile, newZone and zoneEntry structs to mach current
   data (these structs are still not 100% documented)

dohpaZ (30/12/01)
---------------------
Modifications:
 + Fix for map panning bug
 + Applied patch #496581 "Quick fix for Exp-Window"
 + Applied patch #496462 "consider msg patch" from wyvern (mvern)
 + Modified Experience handling to use the group class and made the 
   ExperienceWindow work more or less (not perfect, but it's something).
 + Temporarily disable group code until the crashing bug can be found 
   (any volunteers to fix it?)
 + Added some keyboard accelerators to the maps.
   The following keyboard accelerators are configurable on a per map basis 
   (listed by preference name):
     ZoomInKey                => +
     ZoomOutKey               => -
     CenterSelectedKey        => Ctrl+5
     ViewLockKey              => Ctrl+0
     PanDownLeftKey           => Ctrl+1
     PanDownKey               => Ctrl+2
     PanDownRightKey          => Ctrl+3